; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_muraster.c_read_resolution.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_muraster.c_read_resolution.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@x_resolution = common dso_local global i8* null, align 8
@y_resolution = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @read_resolution to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_resolution(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i8* @strchr(i8* %4, i8 signext 44)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i8* @strchr(i8* %9, i8 signext 120)
  store i8* %10, i8** %3, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i8*, i8** %3, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i8*, i8** %2, align 8
  %16 = call i8* @strchr(i8* %15, i8 signext 58)
  store i8* %16, i8** %3, align 8
  br label %17

17:                                               ; preds = %14, %11
  %18 = load i8*, i8** %3, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i8*, i8** %2, align 8
  %22 = call i8* @strchr(i8* %21, i8 signext 59)
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i8*, i8** %2, align 8
  %25 = call i8* @fz_atoi(i8* %24)
  store i8* %25, i8** @x_resolution, align 8
  %26 = load i8*, i8** %3, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %37

28:                                               ; preds = %23
  %29 = load i8*, i8** %3, align 8
  %30 = getelementptr inbounds i8, i8* %29, i64 1
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %28
  %35 = load i8*, i8** %2, align 8
  %36 = call i8* @fz_atoi(i8* %35)
  store i8* %36, i8** @y_resolution, align 8
  br label %39

37:                                               ; preds = %28, %23
  %38 = load i8*, i8** @x_resolution, align 8
  store i8* %38, i8** @y_resolution, align 8
  br label %39

39:                                               ; preds = %37, %34
  ret void
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8* @fz_atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
